@@ -1,6 +1,6 @@
 package ua.com.fielden.platform.processors.test_utils;
 
-import org.junit.runners.model.Statement;
+import com.google.testing.compile.ForwardingStandardJavaFileManager;
 import ua.com.fielden.platform.processors.test_utils.exceptions.CompilationException;
 import ua.com.fielden.platform.types.try_wrapper.ThrowableConsumer;
 
@@ -12,10 +12,8 @@ import javax.lang.model.SourceVersion;
 import javax.lang.model.element.TypeElement;
 import javax.tools.*;
 import javax.tools.JavaCompiler.CompilationTask;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.List;
-import java.util.Set;
+import java.io.IOException;
+import java.util.*;
 import java.util.function.Consumer;
 
 /**
@@ -33,11 +31,11 @@ public final class Compilation {
     /** Java compiler option to perform only annotation processing (without subsequent compilation) */
     public static final String OPTION_PROC_ONLY = "-proc:only";
 
-    private Collection<? extends JavaFileObject> javaSources;
+    private final Set<JavaFileObject> javaSources;
     private Processor processor;
     private JavaCompiler compiler;
-    private JavaFileManager fileManager;
-    private Iterable<String> options;
+    private StandardJavaFileManager fileManager;
+    private final List<String> options = new LinkedList<>();
     private DiagnosticCollector<JavaFileObject> diagnosticListener = new DiagnosticCollector<>();
 
     /**
@@ -57,19 +55,16 @@ public final class Compilation {
      * Only a single annotation processor is allowed to ensure that the processing environment is not shared with other processors, which could lead to unexpected behaviour.
      *
      * @param javaSources java sources to compile
-     * @param processor annotation processor to use during compilation
-     * @param compiler
-     * @param fileManager
-     * @param options
      */
     public Compilation(final Collection<? extends JavaFileObject> javaSources) {
-        this.javaSources = javaSources;
+        this.javaSources = new HashSet<>(javaSources);
         this.compiler = ToolProvider.getSystemJavaCompiler();
         this.fileManager = compiler.getStandardFileManager(null, null, null);
     }
 
     public Compilation setJavaSources(final Collection<? extends JavaFileObject> javaSources) {
-        this.javaSources = javaSources;
+        this.javaSources.clear();
+        this.javaSources.addAll(javaSources);
         return this;
     }
 
@@ -83,18 +78,23 @@ public final class Compilation {
         return this;
     }
 
-    public Compilation setFileManager(final JavaFileManager fileManager) {
+    public Compilation setFileManager(final StandardJavaFileManager fileManager) {
         this.fileManager = fileManager;
         return this;
     }
 
-    public Compilation setOptions(final Iterable<String> options) {
-        this.options = options;
+    public Compilation addOptions(final Iterable<String> options) {
+        options.forEach(opt -> this.options.add(opt));
         return this;
     }
 
-    public Compilation setOptions(final String... options) {
-        this.options = Arrays.asList(options);
+    public Compilation addOptions(final String... options) {
+        this.options.addAll(List.of(options));
+        return this;
+    }
+
+    public Compilation addProcessorOption(final String key, final String value) {
+        this.options.add("-A%s=%s".formatted(key, value));
         return this;
     }
 
@@ -110,12 +110,12 @@ public final class Compilation {
      *
      * @param evaluator
      * @return result of the compilation
-     * @throws Throwable
+     * @throws Throwable    an exception that might be thrown by {@code evaluator}
      */
     public CompilationResult compileAndEvaluatef(final ThrowableConsumer<ProcessingEnvironment> evaluator) {
         final EvaluatingProcessor evaluatingProcessor = new EvaluatingProcessor(evaluator);
         final CompilationResult result = doCompile(evaluatingProcessor);
-        evaluatingProcessor.throwIfStatementThrew();
+        evaluatingProcessor.throwIfEvaluatorThrew();
         return result;
     }
 
@@ -124,7 +124,7 @@ public final class Compilation {
      *
      * @param evaluator
      * @return result of the compilation
-     * @throws Throwable
+     * @throws Throwable    an exception that might be thrown by {@code evaluator}
      */
     public CompilationResult compileAndEvaluate(final Consumer<ProcessingEnvironment> evaluator) {
         return compileAndEvaluatef((procEnv) -> evaluator.accept(procEnv));
@@ -135,6 +135,7 @@ public final class Compilation {
     }
 
     private CompilationResult doCompile(final EvaluatingProcessor processor) {
+        final ForwardingJavaFileManagerWithCache fileManager = new ForwardingJavaFileManagerWithCache(this.fileManager);
         final CompilationTask task = compiler.getTask(
                 null, // Writer for additional output from the compiler (null => System.err)
                 fileManager,
@@ -145,7 +146,8 @@ public final class Compilation {
         task.setProcessors(List.of(processor));
         final boolean success = task.call();
 
-        return new CompilationResult(success, diagnosticListener.getDiagnostics());
+        return new CompilationResult(success, diagnosticListener.getDiagnostics(), processor.processingErrors,
+                fileManager.getGeneratedSources());
     }
 
     /**
@@ -155,7 +157,8 @@ public final class Compilation {
     private final class EvaluatingProcessor extends AbstractProcessor {
 
         private final ThrowableConsumer<ProcessingEnvironment> evaluator;
-        private CompilationException thrown;
+        private CompilationException evaluatorError;
+        private final List<Throwable> processingErrors = new LinkedList<>();
 
         public EvaluatingProcessor(final ThrowableConsumer<ProcessingEnvironment> evaluator) {
             this.evaluator = evaluator;
@@ -163,16 +166,21 @@ public final class Compilation {
 
         @Override
         public SourceVersion getSupportedSourceVersion() {
-            return SourceVersion.latest();
+            return processor != null ? processor.getSupportedSourceVersion() : SourceVersion.latestSupported();
         }
 
         @Override
         public Set<String> getSupportedAnnotationTypes() {
-            return Set.of("*");
+            return processor != null ? processor.getSupportedAnnotationTypes() : Set.of("*");
         }
 
         @Override
-        public synchronized void init(ProcessingEnvironment processingEnv) {
+        public Set<String> getSupportedOptions() {
+            return processor != null ? processor.getSupportedOptions() : super.getSupportedOptions();
+        }
+
+        @Override
+        public synchronized void init(final ProcessingEnvironment processingEnv) {
             super.init(processingEnv);
             if (processor != null) {
                 processor.init(processingEnv);
@@ -180,27 +188,59 @@ public final class Compilation {
         }
 
         @Override
-        public boolean process(Set<? extends TypeElement> annotations, RoundEnvironment roundEnv) {
+        public boolean process(final Set<? extends TypeElement> annotations, final RoundEnvironment roundEnv) {
             if (processor != null) {
-                processor.process(annotations, roundEnv);
+                try {
+                    processor.process(annotations, roundEnv);
+                } catch (final Throwable ex) {
+                    processingErrors.add(ex);
+                }
             }
             if (roundEnv.processingOver()) {
                 try {
                     evaluator.accept(processingEnv);
                 } catch (final Throwable ex) {
-                    thrown = new CompilationException(ex);
+                    evaluatorError = new CompilationException(ex);
                 }
             }
             return false;
         }
 
         /**
-         * Throws what {@code base} {@link Statement} threw, if anything.
+         * Throws what {@link #evaluator} threw, if anything.
          */
-        void throwIfStatementThrew() {
-            if (thrown != null) {
-                throw thrown;
+        void throwIfEvaluatorThrew() {
+            if (evaluatorError != null) {
+                throw evaluatorError;
             }
+        }
+    }
+
+    /**
+     * A forwarding java file manager that remembers generated sources so that they can be retrieved later.
+     */
+    private static final class ForwardingJavaFileManagerWithCache extends ForwardingStandardJavaFileManager {
+
+        private final List<JavaFileObject> generatedJavaSources = new ArrayList<>();
+
+        ForwardingJavaFileManagerWithCache(StandardJavaFileManager fileManager) {
+            super(fileManager);
+        }
+
+        @Override
+        public JavaFileObject getJavaFileForOutput(
+                Location location, String className, final JavaFileObject.Kind kind, FileObject sibling)
+                throws IOException
+        {
+            JavaFileObject jfo = super.getJavaFileForOutput(location, className, kind, sibling);
+            if (location.isOutputLocation() && kind == JavaFileObject.Kind.SOURCE) {
+                generatedJavaSources.add(jfo);
+            }
+            return jfo;
+        }
+
+        public List<JavaFileObject> getGeneratedSources() {
+            return List.copyOf(generatedJavaSources);
         }
     }
 
